[package]
name = "dsa_practice"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust project for practicing Data Structures and Algorithms"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# For testing and benchmarking
criterion = "0.5"

[dev-dependencies]
# For property-based testing
proptest = "1.3"
